java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateParam1-hints.pass
Create Local Variable foo
Create Field foo in org.netbeans.test.java.hints.CreateParam1
Create Parameter foo
